--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,16 +1,16 @@
 doctrine:
     dbal:
-        driver: "pdo_mysql"
+        driver: 'pdo_mysql'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
-        server_version: "11.8.3-MariaDB-ubu2404"
+        server_version: '11.8.3-MariaDB-ubu2404'
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
-        url: "%env(resolve:DATABASE_URL)%"
+        url: '%env(resolve:DATABASE_URL)%'
 
-        profiling_collect_backtrace: "%kernel.debug%"
+        profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
     orm:
         auto_generate_proxy_classes: true
@@ -24,7 +24,7 @@ doctrine:
             App:
                 type: attribute
                 is_bundle: false
-                dir: "%kernel.project_dir%/src/Entity"
+                dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
         dql:
@@ -39,17 +39,29 @@ doctrine:
         controller_resolver:
             auto_mapping: false
 
+when@dev:
+    doctrine:
+        orm:
+            result_cache_driver:
+                type: pool
+                pool: doctrine.result_cache_pool
+    framework:
+        cache:
+            pools:
+                doctrine.result_cache_pool:
+                    adapter: cache.app
+
 when@test:
     doctrine:
         dbal:
             # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: "_test%env(default::TEST_TOKEN)%"
+            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
 
 when@prod:
     doctrine:
         orm:
             auto_generate_proxy_classes: false
-            proxy_dir: "%kernel.build_dir%/doctrine/orm/Proxies"
+            proxy_dir: '%kernel.build_dir%/doctrine/orm/Proxies'
             query_cache_driver:
                 type: pool
                 pool: doctrine.system_cache_pool
@@ -62,7 +74,7 @@ when@prod:
 
     framework:
         cache:
-            pools:                
+            pools:
                 doctrine.result_cache_pool:
                     adapter: cache.adapter.redis
                 doctrine.system_cache_pool:
