--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.90.0",
+        "giorgiosironi/eris": "^1.0",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
@@ -72,10 +73,11 @@
     },
     "config": {
         "allow-plugins": {
-            "symfony/flex": true,
-            "symfony/runtime": true,
+            "infection/extension-installer": true,
+            "php-http/discovery": true,
             "phpstan/extension-installer": true,
-            "php-http/discovery": true
+            "symfony/flex": true,
+            "symfony/runtime": true
         },
         "platform": {
             "php": "8.4.13"
