--- a/config/packages/ux_translator.yaml
+++ b/config/packages/ux_translator.yaml
@@ -1,3 +1,3 @@
 ux_translator:
     # Only include messages domain (exclude validators, security, etc.)
-    domains: ['messages']
+    domains: ['messages' ,'database']
