--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,7 @@
 api_platform:
     title: 'Captain Coaster API'
-    description: 'Welcome to Captain Coaster API! API Keys for authentication can be found in your profile page. Contact us to get support.'
-    version: '1.0.2'
+    description: 'Welcome to Captain Coaster API! Please contact us to get support.'
+    version: '1.0.3'
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     http_cache:
